--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -38,12 +38,12 @@
 .hexSpan {
   margin-bottom: 1.8rem;
   border-top: 2px solid #ffffff2f;
-  padding-left: 3rem;
+  padding-left: 30%;
 }
 
 .rgbSpan {
   border-radius: 0 0 0.5rem 0.5rem;
-  padding-left: 1.5rem;
+  padding-left: 2.5rem;
 }
 
 .colors li span {
